# BMO-Utils

./: LICENSE  README.md
RetroPie/: README.md
RetroPie/bmos-theme/: bmos.xml
RetroPie/bmos-theme/3do/: theme.xml
RetroPie/bmos-theme/ags/: theme.xml
RetroPie/bmos-theme/amiga/: theme.xml
RetroPie/bmos-theme/amstradcpc/: theme.xml
RetroPie/bmos-theme/apple2/: theme.xml
RetroPie/bmos-theme/arcade/: theme.xml
RetroPie/bmos-theme/art/: theme.xml
RetroPie/bmos-theme/assets/: 8bitoperator-license.txt
RetroPie/bmos-theme/astrocade/: theme.xml
RetroPie/bmos-theme/atari5200/: theme.xml
RetroPie/bmos-theme/atari7800/: theme.xml
RetroPie/bmos-theme/atarijaguar/: theme.xml
RetroPie/bmos-theme/atarilynx/: theme.xml
RetroPie/bmos-theme/atarist/: theme.xml
RetroPie/bmos-theme/auto-allgames/: theme.xml
RetroPie/bmos-theme/auto-favorites/: theme.xml
RetroPie/bmos-theme/auto-lastplayed/: theme.xml
RetroPie/bmos-theme/bbcmicro/: theme.xml
RetroPie/bmos-theme/c64/: theme.xml
RetroPie/bmos-theme/channelf/: theme.xml
RetroPie/bmos-theme/coco/: theme.xml
RetroPie/bmos-theme/colecovision/: theme.xml
RetroPie/bmos-theme/custom-collections/: theme.xml
RetroPie/bmos-theme/daphne/: theme.xml
RetroPie/bmos-theme/desktop/: theme.xml
RetroPie/bmos-theme/dragon32/: theme.xml
audio/: README.md  pizeroaudio.sh  record.sh  volume.sh
parade/: CAnimate.cpp  CAnimate.h  CMakeLists.txt  CRectangle.cpp  CRectangle.h  CText.cpp  CText.h  CTexture.cpp  CTexture.h  main.cpp
parade/scripts/: parade.sh  speech-recog.sh
pi/: README.md  bashrc  config.txt
retrogame-config/: README.md  retrogame.cfg
servos/: CMakeLists.txt  README.md  arms.c
servos/servos/: limits.txt
voice/: CMakeLists.txt  README.md  google-voice.sh  transcribe.py
voice/opt/: libaddress_sorting.so.7  libgrpc++.so.1.20.0  libgrpc++_cronet.so.1  libgrpc++_error_details.so.1  libgrpc++_unsecure.so.1  libgrpc.so.7  libgrpc_cronet.so.7  libgrpcpp_channelz.so.1  transcribe
voice/opt/pkgconfig/: grpc++.pc  grpc++_unsecure.pc
voice/opt/proto/: libprotobuf-lite.la  libprotobuf.la  libprotoc.la
(+72 files in other folders)
